# legisplain

./: .gitignore  README.md  config_template.yml  demo_chroma.py  main.py  pyproject.toml  upload_chroma_to_hf.py
legisplain/: bill_status_mod.py  billstatus_mod.py  chroma.py  chunking.py  chunking_bge.py  chunking_v1.py  config.py  emb_atlas.py  embedding.py  embedding_v1.py  estimate_char_per_token.py  pinecone_mod.py  populate_pg.py  textversion_mod.py  upload_hf.py  utils.py
scripts/bulk_download/: config_template.yml  download-and-sync-with-log.sh  download-with-logs.sh  download.sh  sync.sh
templates/hf/usc-billstatus/: README.md
templates/hf/usc-textversion/: README.md
templates/hf/usc-textversion-tag/: README.md
templates/hf/usc-textversion-xml/: README.md
templates/hf/usc-unified/: README.md
templates/hf/usc-unified-xml/: README.md
test-data/113/bills/hr/hr4200/: fdsys_billstatus.xml
test-data/115/bills/hr/hr3354/: fdsys_billstatus.xml
test-data/117/bills/hr/hr10/: fdsys_billstatus.xml
test-data/117/bills/hr/hr11/: fdsys_billstatus.xml
test-data/117/bills/hr/hr12/: fdsys_billstatus.xml
test-data/117/bills/hr/hr13/: fdsys_billstatus.xml
test-data/117/bills/hr/hr14/: fdsys_billstatus.xml
test-data/117/bills/hr/hr15/: fdsys_billstatus.xml
test-data/117/bills/hr/hr16/: fdsys_billstatus.xml
test-data/117/bills/hr/hr17/: fdsys_billstatus.xml
test-data/117/bills/hr/hr2/: fdsys_billstatus.xml
test-data/117/bills/hr/hr20/: fdsys_billstatus.xml
test-data/117/bills/hr/hr9/: fdsys_billstatus.xml
