[project]
name = "legisplain"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Altay", email = "gabriel.altay@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "huggingface_hub>=0.34.4",
    "datasets>=4.0.0",
    "embedding-atlas>=0.9.0",
    "flagembedding>=1.3.5",
    "ipython>=8.37.0",
    "langchain>=0.3.27",
    "pandas>=2.3.2",
    "pinecone>=7.3.0",
    "pip>=25.2",
    "pqdm>=0.2.0",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.0.0",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "ruff>=0.12.12",
    "sentence-transformers>=5.1.0",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.43",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "typer>=0.17.3",
    "united-states-congress",
    "unstructured>=0.18.14",
    "chromadb>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
united-states-congress = { git = "https://github.com/unitedstates/congress" }
